<resources>

    <!-- Application -->
    <string name="app_description">NatureNet is a platform for sharing place-based nature observations and contributing design ideas. Please do NOT contribute photos of humans or pets. NatureNet is a moderated site. Postings that are inappropriate or irrelevant will be deleted. If you want one of your observations to be removed, please send an email to naturenetapp@gmail.com with a description of the content you would like to be removed.</string>
    <!-- Application -->

    <!-- Splash Activity -->
    <!-- Splash Activity -->

    <!-- Join Activity -->
    <!-- Layout -->
    <string name="join_title">Join NatureNet</string>
    <string name="join_tv_create">Create New Account</string>
    <string name="join_et_user_name">Display Name</string>
    <string name="join_et_password">Password</string>
    <string name="join_et_name">Name</string>
    <string name="join_et_email_address">Email Address</string>
    <string name="join_et_affiliation">Affiliation</string>
    <string name="join_b_join">Join</string>
    <!-- Messages -->
    <string name="join_default_avatar">http://res.cloudinary.com/university-of-colorado/image/upload/v1467309210/v1jhqk1aobxi1y3gglv0.jpg</string>
    <string name="join_success_message">Account Created Successfully</string>
    <string name="join_error_message_firebase_read">@string/error_message_firebase_read</string>
    <string name="join_error_message_firebase_create">@string/error_message_firebase_create</string>
    <string name="join_error_message_empty">Enter all the details</string>
    <string name="join_error_message_email_address">Invalid Email Address</string>
    <string name="join_error_message_password">Password should be atleast 6 characters long</string>
    <!-- Join Activity -->

    <!-- Login Activity -->
    <!-- Login Activity -->

    <!-- Login Fragment -->
    <!-- Layout -->
    <string name="login_et_email_address">Email</string>
    <string name="login_et_password">Password</string>
    <string name="login_b_sign_in">Sign In</string>
    <string name="login_tv_forgot">Forgot your password?</string>
    <string name="login_tv_join">Join NatureNet</string>
    <!-- Messages -->
    <string name="login_error_message_empty_email">Email can not be empty!</string>
    <string name="login_error_message_empty_password">Password can not be empty!</string>
    <string name="login_error_message_firebase_read">@string/error_message_firebase_read</string>
    <string name="login_error_message_firebase_login">@string/error_message_firebase_login</string>
    <!-- Login Fragment -->

    <!-- Forgot Fragment -->
    <!-- Forgot Fragment -->

    <!-- Add Observation Activity -->
    <!-- Add Observation Activity -->

    <!-- Add Observation Fragment -->
    <string name="add_observation_title">Observation</string>
    <string name="add_observation_tv_send">Send</string>
    <string name="add_observation_tv_description">Description</string>
    <string name="add_observation_tv_where">Set Location</string>
    <string name="add_observation_tv_project_label">Project</string>
    <string name="add_observation_b_project">Choose a Project</string>
    <string name="add_observation_default_project">%1$s (Default)</string>
    <string name="clear_text">Clear</string>
    <!-- Add Observation Fragment -->

    <!-- Project Activity -->
    <string name="project_back">&#60;&#60; PROJECTS</string>
    <string name="project_back_left_arrows">&#60;&#60; %1$s</string>
    <string name="project_tv_no_recent_contributions">No Recent Contributions</string>
    <string name="project_tv_recent_contributions">Recent Contributions</string>
    <string name="acesLabel">Aspen</string>
    <string name="awsLabel">Anacostia</string>
    <string name="elseLabel">Elsewhere</string>
    <string name="rcncLabel">Reedy Creek</string>
    <string name="are_you_sure">Are you sure?</string>
    <!-- Project Activity -->

    <!-- Observation Activity -->
    <string name="observation_title">Observation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_observation">Nothing to display. Observation may have been deleted.</string>
    <!-- Observation Activity -->

    <!-- Main Activity -->
    <string name="no_network">No network connection.</string>
    <!-- Main Activity -->

    <!-- Navigation Panel -->
    <!-- Layout -->
    <string name="nav_tv_guest">Guest</string>
    <string name="nav_b_sign_in">Sign In</string>
    <string name="nav_b_join">Join NatureNet</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_design_ideas">Design Ideas</string>
    <string name="nav_communities">Communities</string>
    <string name="nav_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Navigation Panel -->

    <!-- Launch Fragment -->
    <!-- Layout -->
    <string name="launch_title">NatureNet</string>
    <string name="launch_tv_what">What is NatureNet?</string>
    <string name="launch_tv_what_para">A community of citizen environmentalists whose members keep making it better.</string>
    <string name="launch_tv_learn">LEARN about nature in your community</string>
    <string name="launch_tv_share">SHARE your observations and ideas</string>
    <string name="launch_tv_shape">SHAPE nature projects in your local community</string>
    <string name="launch_tv_design">DESIGN this nature technology with your community</string>
    <string name="launch_tv_why">Why join NatureNet?</string>
    <string name="launch_tv_para">Do you want to participate in a biodiversity-preserving project in your area? Or do you have an idea for a new project and want to get a community behind you? Join NatureNet today, and don’t just be a voice in the crowd: be part of a crowd with a voice!</string>
    <string name="launch_tv_already">Already a Member?</string>
    <string name="launch_tv_sign_in">Sign In</string>
    <!-- Launch Fragment -->

    <!-- Explore Fragment -->
    <!-- Layout -->
    <string name="explore_title">NatureNet</string>
    <string name="explore_b_explore">Explore</string>
    <string name="explore_my_location">My Location</string>
    <!-- Explore Fragment -->

    <!-- Gallery Fragment -->
    <string name="gallery_loading_observations">Displaying Observations…</string>

    <!-- Add Observation Dialog -->
    <string name="dialog_add_observation_tv_cancel">Cancel</string>
    <string name="dialog_add_observation_tv_choose">Choose Image</string>
    <string name="dialog_add_observation_tv_select">Select</string>
    <string name="dialog_add_observation_b_camera">Camera</string>
    <string name="dialog_add_observation_b_gallery">Gallery</string>
    <string name="dialog_add_observation_success">Your observation has been added successfully.</string>
    <string name="dialog_add_observation_error">Your observation could not be submitted.</string>
    <string name="image_upload_error">Your photo could not be uploaded. Please try again later or choose another photo.</string>
    <!-- Add Observation Dialog -->

    <!-- Add Design Idea-->
    <string name="dialog_add_design_idea_tv_cancel">Cancel</string>
    <string name="dialog_add_design_idea_tv_para1">Crowdsourcing design is a way for anyone to contribute to the NatureNet experience. Designers change the world and the NatureNet project gives everyone a chance to be a designer. Your design ideas can be a new way of using NatureNet in your community, and new to use mobile technology for learning about sustainability or changes in the environment, or a new feature on the web site.</string>
    <string name="dialog_add_design_idea_tv_para2">Join the discussion below with an idea or challenge of your own, comment on someone else\'s idea, or vote for your favorite idea.</string>
    <string name="dialog_add_design_idea_tv_choose">Choose Idea</string>
    <string name="dialog_add_design_idea_b_design_ideas">Design Ideas</string>
    <string name="dialog_add_design_idea_b_design_challenges">Design Challenges</string>
    <string name="choose_idea_type">Choose Idea Type:</string>
    <string-array name="idea_types">
        <item>New Features</item>
        <item>Project Ideas</item>
        <item>Community Ideas</item>
        <item>Improvement Ideas</item>
    </string-array>
    <!-- Add Design Idea Dialog -->

    <!-- Projects Fragment -->
    <!-- Layout -->
    <string name="projects_title">Projects</string>
    <string name="add_project_title">Add Project</string>
    <string name="add_project_description">Projects in NatureNet are a call to action! They identify a question, a problem, or a topic that contributions can shed light on. Examples might include: examples of rainwater run&#8211;off, how many geese are present in our park, which non&#8211;native plants are invasive in our park. Please give your project a short name (1&#8211;3 words) and a description. We suggest you add hashtags to your description such as: #capstone #subproject #water #pollution</string>
    <string name="enter_project_title">Enter a title:</string>
    <string name="enter_project_description">Enter a description:</string>
    <string name="no_more_projects">No more projects to load.</string>
    <string name="no_projects">No projects in your affiliation to display!</string>
    <!-- Projects Fragment -->

    <!-- Design Ideas Fragment -->
    <!-- Layout -->
    <string name="design_ideas_title_design_ideas">Design Ideas</string>
    <string name="discussing">Discussing</string>
    <string name="developing">Developing</string>
    <string name="testing">Testing</string>
    <string name="done">Completed</string>
    <!-- Design Ideas Fragment -->

    <!-- Communities Fragment -->
    <!-- Layout -->
    <string name="communities_title">Communities</string>
    <string name="load_more">Load More</string>
    <string name="no_more_users">No more users to load.</string>
    <!-- Communities Fragment -->

    <!-- General -->
    <!-- Layout -->
    <string name="no_description">No Description</string>
    <string name="no_timestamp">No Timestamp</string>
    <string name="unknown_user">A NatureNet User</string>
    <!-- Messages -->
    <string name="permission_rejected">Permissions were denied. You may grant permissions in your Application Settings.</string>
    <string name="error_message_firebase_read">The read failed: </string>
    <string name="error_message_firebase_create">Failed to create: </string>
    <string name="error_message_firebase_login">Login Unsuccessful: </string>
    <string name="no_connection">Not connected to NatureNet. Please check your network connection.</string>
    <string name="no_connection_warning">Please check your network connection. There may be a delay </string>
    <string name="people_string">People</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="observations_text">Observation(s)</string>
    <string name="design_ideas_text">Design Idea(s)</string>
    <string name="recent_observations">Recent Contributions</string>
    <string name="gallery_title">Gallery</string>
    <string name="design_ideas_title">Design Ideas</string>
    <string name="design_ideas_info_text">Design Ideas in NatureNet directs the technology towards your suggestions and needs. Examples of design ideas include a new feature for using NatureNet in your community, a new way to use mobile technology for learning about sustainability or changes in the environment, or a new function for this mobile app.</string>
    <string name="add_design_idea_title">Add Design Idea</string>
    <string name="participatory_design"><a href="https://en.wikipedia.org/wiki/Participatory_design">Learn more about participatory design.</a></string>
    <string name="sitesLabel">Sites:</string>
    <string name="obs_submission_info">Each picture will be submitted as a separate Observation. Observation captions may be edited after submission.</string>
    <string name="username">Username</string>
    <string name="apply">Apply Changes</string>
    <string name="affiliation">Affiliation</string>
    <string name="bio">Bio</string>
    <string name="myAccount">My Account</string>
    <string name="new_project_notification_description">Send me notifications about new Projects that have been submitted.</string>
    <string name="new_idea_notification_description">Send me notifications about new Design Ideas that have been submitted.</string>
    <string name="could_not_load_settings">Could Not Load Settings</string>
    <!-- General -->

</resources>