...
        android:layout_height="@dimen/nav_b_height"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/nav_margin_bottom"
        style="@style/nav_b_sign_in" />

    <TextView
        android:id="@+id/nav_tv_display_name"
        android:layout_below="@+id/nav_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/nav_margin_bottom"
        style="@style/nav_tv_display_name" />
...
