...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/launch_para_margin_bottom"
            style="@style/launch_tv_para"/>

        <ImageButton
            android:id="@+id/launch_ib_join"
            android:layout_below="@+id/launch_tv_para"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/launch_ib_join" />

...
